# legal-document-platform

legal-document-platform/backend/: .gitignore  pyproject.toml  requirements.txt
legal-document-platform/backend/app/: __init__.py  config.py
legal-document-platform/backend/app/ai/: document_classifier.py  fraud_detection.py  text_extraction.py
legal-document-platform/backend/app/middleware/: auth_middleware.py  cors_middleware.py  error_handler.py  logging_middleware.py  rate_limiter.py
legal-document-platform/backend/app/models/: audit_log.py  consultation.py  document.py  notification.py  payment.py  signature.py  subscription.py  template.py  transaction.py  user.py
legal-document-platform/backend/app/schemas/: consultation_schema.py  document_schema.py  payment_schema.py  signature_schema.py  template_schema.py  user_schema.py
legal-document-platform/backend/app/services/: analytics_service.py  auth_service.py  consultation_service.py  document_service.py  email_service.py  encryption_service.py  notification_service.py  payment_service.py  pdf_service.py  search_service.py  signature_service.py  sms_service.py  storage_service.py  template_service.py  user_service.py  validation_service.py
legal-document-platform/backend/app/tasks/: celery_config.py  cleanup_tasks.py  document_tasks.py  email_tasks.py  notification_tasks.py
legal-document-platform/backend/app/utils/: constants.py  date_utils.py  decorators.py  exceptions.py  file_handler.py  helpers.py  security_utils.py  validators.py
legal-document-platform/backend/tests/: conftest.py
(+187 files in other folders)
