[project]
name = "legal-document-platform-backend"
version = "0.1.0"
description = "The backend for the Legal Document Platform."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]
namespaces = false